# hardware-recommend

./: .env.example  .gitignore  README.md  agents.yaml  crawl.py  cron.py  database.db  input.py  main.py  pyproject.toml
data/: default__vector_store.json  docstore.json  index_store.json
